--- a/cmapR_tutorial.ipynb
+++ b/cmapR_tutorial.ipynb
@@ -48,17 +48,17 @@
    "metadata": {
     "collapsed": false
    },
-   //"outputs": [
-    //{
-     //"name": "stderr",
-     //"output_type": "stream",
-     //"text": [
-      //"Loading required package: rhdf5\n",
-      //"Warning message:\n",
-     // "“package ‘rhdf5’ was built under R version 3.2.2”Loading required package: data.table\n"
-     //]
-    //}
-   //],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: rhdf5\n",
+      "Warning message:\n",
+     "“package ‘rhdf5’ was built under R version 3.2.2”Loading required package: data.table\n"
+     ]
+    }
+   ],
    "source": [
     "# load the library\n",
     "library(cmapR)"
