--- a/cmapR_tutorial.ipynb
+++ b/cmapR_tutorial.ipynb
@@ -251,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Slicing a GCTX object\n",
+    "## Slicing a GCT object\n",
     "\n",
     "Just as it's possible to read a subset of rows or columns from a GCTX file, it is also possible to extract a subset of rows or columns from a GCT object in memory. This is done with the `subset.gct` function."
    ]
