updated tutorial with GCT creation from existing objects

--- a/cmapR_tutorial.ipynb
+++ b/cmapR_tutorial.ipynb
@@ -44,11 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: rhdf5\n",
+      "Warning message:\n",
+      "“package ‘rhdf5’ was built under R version 3.2.2”Loading required package: data.table\n"
+     ]
+    }
+   ],
    "source": [
     "# load the library\n",
     "library(cmapR)"
@@ -169,6 +179,79 @@
     "\n",
     "# simply typing the variable name of a GCT object will display the object structure, similar to calling 'str'\n",
     "vorinostat_ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a GCT object from existing workspace objects\n",
+    "It's also possible to create a GCT object from existing objects in your R workspace. You will minimally need to have a matrix object, but can also optionally include `data.frame`s of row and column annotations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Formal class 'GCT' [package \"cmapR\"] with 7 slots\n",
+       "  ..@ mat    : num [1:10, 1:10] -0.0747 -1.4496 0.6537 -1.0709 -0.66 ...\n",
+       "  .. ..- attr(*, \"dimnames\")=List of 2\n",
+       "  .. .. ..$ : chr [1:10] \"a\" \"b\" \"c\" \"d\" ...\n",
+       "  .. .. ..$ : chr [1:10] \"A\" \"B\" \"C\" \"D\" ...\n",
+       "  ..@ rid    : chr [1:10] \"a\" \"b\" \"c\" \"d\" ...\n",
+       "  ..@ cid    : chr [1:10] \"A\" \"B\" \"C\" \"D\" ...\n",
+       "  ..@ rdesc  :'data.frame':\t0 obs. of  0 variables\n",
+       "Formal class 'data.frame' [package \"methods\"] with 4 slots\n",
+       "  .. .. ..@ .Data    : list()\n",
+       "  .. .. ..@ names    : chr(0) \n",
+       "  .. .. ..@ row.names: int(0) \n",
+       "  .. .. ..@ .S3Class : chr \"data.frame\"\n",
+       "  ..@ cdesc  :'data.frame':\t0 obs. of  0 variables\n",
+       "Formal class 'data.frame' [package \"methods\"] with 4 slots\n",
+       "  .. .. ..@ .Data    : list()\n",
+       "  .. .. ..@ names    : chr(0) \n",
+       "  .. .. ..@ row.names: int(0) \n",
+       "  .. .. ..@ .S3Class : chr \"data.frame\"\n",
+       "  ..@ version: chr(0) \n",
+       "  ..@ src    : chr(0) "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in .local(.Object, ...): object 'cdesc' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in .local(.Object, ...): object 'cdesc' not found\nTraceback:\n",
+      "1. new(\"GCT\", mat = mat, rdesc = rdesc, cdesc = cdesc)",
+      "2. initialize(value, ...)",
+      "3. initialize(value, ...)",
+      "4. .local(.Object, ...)"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize a matrix object\n",
+    "# note that you either must assign values to the rownames and colnames of the matrix, or pass them\n",
+    "# as the 'rid' and 'cid' arguments to GCT\n",
+    "mat <- matrix(stats::rnorm(100), ncol=10)\n",
+    "rownames(mat) <- letters[1:10]\n",
+    "colnames(mat) <- LETTERS[1:10]\n",
+    "(my_ds <- new(\"GCT\", mat=mat))\n",
+    "\n",
+    "# we can also include the row/column annotations as data.frames\n",
+    "# note these are just arbitrary annotations used to illustrate the function call\n",
+    "rdesc <- data.frame(id=letters[1:10], type=rep(c(1, 2), each=5))\n",
+    "cdesc <- data.frame(id=LETTERS[1:10], type=rep(c(3, 4), each=5))\n",
+    "(my_ds <- new(\"GCT\", mat=mat, rdesc=rdesc, cdesc=cdesc))"
    ]
   },
   {
