updated tutorial to show GCT creation from existing objects

--- a/cmapR_tutorial.ipynb
+++ b/cmapR_tutorial.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +200,7 @@
      "data": {
       "text/plain": [
        "Formal class 'GCT' [package \"cmapR\"] with 7 slots\n",
-       "  ..@ mat    : num [1:10, 1:10] -0.0747 -1.4496 0.6537 -1.0709 -0.66 ...\n",
+       "  ..@ mat    : num [1:10, 1:10] 1.075 0.503 -2.385 0.653 -1.134 ...\n",
        "  .. ..- attr(*, \"dimnames\")=List of 2\n",
        "  .. .. ..$ : chr [1:10] \"a\" \"b\" \"c\" \"d\" ...\n",
        "  .. .. ..$ : chr [1:10] \"A\" \"B\" \"C\" \"D\" ...\n",
@@ -226,16 +226,27 @@
      "output_type": "display_data"
     },
     {
-     "ename": "ERROR",
-     "evalue": "Error in .local(.Object, ...): object 'cdesc' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in .local(.Object, ...): object 'cdesc' not found\nTraceback:\n",
-      "1. new(\"GCT\", mat = mat, rdesc = rdesc, cdesc = cdesc)",
-      "2. initialize(value, ...)",
-      "3. initialize(value, ...)",
-      "4. .local(.Object, ...)"
-     ]
+     "data": {
+      "text/plain": [
+       "Formal class 'GCT' [package \"cmapR\"] with 7 slots\n",
+       "  ..@ mat    : num [1:10, 1:10] 1.075 0.503 -2.385 0.653 -1.134 ...\n",
+       "  .. ..- attr(*, \"dimnames\")=List of 2\n",
+       "  .. .. ..$ : chr [1:10] \"a\" \"b\" \"c\" \"d\" ...\n",
+       "  .. .. ..$ : chr [1:10] \"A\" \"B\" \"C\" \"D\" ...\n",
+       "  ..@ rid    : chr [1:10] \"a\" \"b\" \"c\" \"d\" ...\n",
+       "  ..@ cid    : chr [1:10] \"A\" \"B\" \"C\" \"D\" ...\n",
+       "  ..@ rdesc  :'data.frame':\t10 obs. of  2 variables:\n",
+       "  .. ..$ id  : Factor w/ 10 levels \"a\",\"b\",\"c\",\"d\",..: 1 2 3 4 5 6 7 8 9 10\n",
+       "  .. ..$ type: num [1:10] 1 1 1 1 1 2 2 2 2 2\n",
+       "  ..@ cdesc  :'data.frame':\t10 obs. of  2 variables:\n",
+       "  .. ..$ id  : Factor w/ 10 levels \"A\",\"B\",\"C\",\"D\",..: 1 2 3 4 5 6 7 8 9 10\n",
+       "  .. ..$ type: num [1:10] 3 3 3 3 3 4 4 4 4 4\n",
+       "  ..@ version: chr(0) \n",
+       "  ..@ src    : chr(0) "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
