removed commenting on parsing of ds_path

--- a/cmapR_tutorial.ipynb
+++ b/cmapR_tutorial.ipynb
@@ -114,7 +114,7 @@
     "# create a variable to store the path to the level 5 GCTX file\n",
     "ds_path <- \"GSE70138_Broad_LINCS_Level5_COMPZ_n118050x12328_2017-03-06.gctx\"\n",
     "\n",
-    "# my_ds <- parse.gctx(ds_path)"
+    "my_ds <- parse.gctx(ds_path)"
    ]
   },
   {
