--- a/cmapR_tutorial.ipynb
+++ b/cmapR_tutorial.ipynb
@@ -166,7 +166,7 @@
    "source": [
     "# read the column annotations as a data.frame\n",
     "col_meta_path <- \"GSE70138_Broad_LINCS_sig_info_2017-03-06.txt\"\n",
-    "col_meta <- read.delim(col_meta_path, sep=\"\\t\", row.names=1, stringsAsFactors=F)\n",
+    "col_meta <- read.delim(col_meta_path, sep=\"\\t\", stringsAsFactors=F)\n",
     "\n",
     "# figure out which signatures correspond to vorinostat by searching the 'pert_iname' column\n",
     "idx <- which(col_meta$pert_iname==\"vorinostat\")\n",
