--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -2,7 +2,9 @@
 title: "cmapR Tutorial"
 author: "Ted Natoli"
 date: "1/10/2020"
-output: html_document
+output:
+  html_document:
+    toc: true
 ---
 
 # Introduction
@@ -43,11 +45,11 @@ ds
 * `src` - a character string indicating the source (usually a file path) of the data
 
 
-# Parsing GCTX files
+## Parsing GCTX files
 
 You can parse both GCT and GCTX files using the `parse.gctx` method. This method will read the corresponding GCT or GCTX file and return an object of class `GCT` into your R session.
 
-## Parsing the entire file
+### Parsing the entire file
 
 If the file is small enough to fit in memory, you can parse the entire file at once.
 ```{r}
@@ -69,7 +71,7 @@ dim(my_ds@mat)
 ```
 This small dataset has 50 rows and 25 columns.
 
-## Parsing a susbset of the file
+### Parsing a susbset of the file
 
 **Note:** only GCTX files (not GCT) support parsing subsets.
 
@@ -149,9 +151,9 @@ Note how now the `cdesc` slot is populated after annotating.
 Just as it's possible to read a subset of rows or columns from a GCTX file, it is also possible to extract a subset of rows or columns from a `GCT` object in memory. This is done with the `subset_gct` function. Just like `parse.gctx`, this function uses `rid` and `cid` parameters to determine which rows and columns to extract. Let's extract the *vemurafenib* columns from the `my_ds` object in memory.
 ```{r}
 # in memory slice using the cid parameter
-vorinostat_ds3 <- subset_gct(my_ds,
+vemurafenib_ds3 <- subset_gct(my_ds,
                              cid=which(my_ds@cdesc$pert_iname=="vemurafenib"))
-identical(vorinostat_ds, vorinostat_ds3)
+identical(vemurafenib_ds, vemurafenib_ds3)
 ```
 
 
@@ -160,13 +162,13 @@ identical(vorinostat_ds, vorinostat_ds3)
 It's often useful to have data stored in long form `data.frame` objects, especially for compatibility with plotting libraries like [`ggplot2`](http://docs.ggplot2.org/current/). It's possible to convert a `GCT` object into this long form by using the `melt.gct` function, which relies on the `melt` function in the [`data.table`](https://cran.r-project.org/web/packages/data.table/) package.
 ```{r}
 # melt to long form
-vorinostat_ds3_melted <- melt.gct(vorinostat_ds3)
+vemurafenib_ds3_melted <- melt.gct(vemurafenib_ds3)
 ```
 
 ```{r}
 # plot the matrix values grouped by gene
 library(ggplot2)
-ggplot(vorinostat_ds3_melted, aes(x=pr_gene_symbol, y=value)) +
+ggplot(vemurafenib_ds3_melted, aes(x=pr_gene_symbol, y=value)) +
   geom_boxplot() +
   theme(axis.text.x = element_text(angle=45, hjust=1, vjust=1))
 ```
@@ -176,6 +178,66 @@ ggplot(vorinostat_ds3_melted, aes(x=pr_gene_symbol, y=value)) +
 
 You can combine two independent `GCT` objects using the `merge.gct` function. Note that it is important to specify which dimension (row or column) you wish to merge on and that the two `GCT` objects in question share one common dimension.
 
+
+## Math operations on GCT objects
+
+The `@mat` slot of a GCT object is a base R matrix object, so it's possible to perform standard math operations on this matrix. This matrix can be accessed directly, i.e. `my_ds@mat`, but can also be extracted using the `get_gct_matrix` function from `cmapR`. Below are a few simple examples, but these can easily be extended, particulary through use of the `apply` function.
+
+```{r}
+# extract the data matrix from the my_ds object
+mat <- get_gct_matrix(my_ds)
+```
+
+Now let's perform a few simple math operations
+```{r}
+# compute the row and column means
+row_means <- rowMeans(mat)
+col_means <- colMeans(mat)
+message("means:")
+head(row_means)
+head(col_means)
+
+# using 'apply', compute the max of each row and column
+row_max <- apply(mat, 1, max)
+col_max <- apply(mat, 2, max)
+message("maxes:")
+head(row_max)
+head(col_max)
+```
+
+### GCT-specific math functions
+
+`cmapR` also contains a handful of math functions designed specifically for operating on `GCT` objects.
+```{r}
+# transposing a GCT object - also swaps row and column annotations
+(my_ds_transpose <- transpose.gct(my_ds))
+
+# converting a GCT object's matrix to ranks
+# the 'dim' option controls the direction along which the ranks are calculated
+my_ds_rank_by_column <- rank.gct(my_ds, dim="col")
+
+# plot z-score vs rank for the first 25 genes (rows)
+plot(my_ds_rank_by_column@mat[1:25, ],
+     my_ds@mat[1:25, ],
+     xlab="differential expression score",
+     ylab="rank",
+     main="score vs. rank")
+```
+
+
+## Writing GCT objects to disk
+`GCT` objects can be written to disk either in GCT or GCTX format using the `write.gct` and `write.gctx` functions, respectively.
+```{r}
+# write 'my_ds' in both GCT and GCTX format
+write.gct(my_ds, "my_ds")
+write.gctx(my_ds, "my_ds")
+
+# write.gctx can also compress the dataset upon write,
+# which can be controlled using the 'compression_level' option.
+# the higher the value, the greater the compression, but the
+# longer the read/write time
+write.gctx(my_ds, "my_ds_compressed", compression_level = 9)
+```
 
 
 # Session Info
