--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -52,7 +52,7 @@ ds
 
 ## Parsing GCTX files
 
-You can parse both GCT and GCTX files using the `parse.gctx` method. This method will read the corresponding GCT or GCTX file and return an object of class `GCT` into your R session.
+You can parse both GCT and GCTX files using the `parse_gctx` method. This method will read the corresponding GCT or GCTX file and return an object of class `GCT` into your R session.
 
 ### Parsing the entire file
 
@@ -62,7 +62,7 @@ If the file is small enough to fit in memory, you can parse the entire file at o
 # here we'll use a file that's internal to the cmapR package, but
 # in practice this could be any valid path to a GCT or GCTX file
 ds_path <- system.file("extdata", "modzs_n25x50.gctx", package="cmapR")
-my_ds <- parse.gctx(ds_path)
+my_ds <- parse_gctx(ds_path)
 ```
 
 You can view the structure of this newly-created GCT object just by typing its name.
@@ -78,27 +78,27 @@ As you can see from looking at the `@mat` slot, this small dataset has 50 rows a
 When working with large GCTX files, it is usually not possible to read the entire file into memory all at once. In these cases, it's helpful to read subsets of the data. These subsets can be defined by numeric row or column index, as shown below.
 ```{r}
 # read just the first 10 columns, using numeric indices
-(my_ds_10_columns <- parse.gctx(ds_path, cid=1:10))
+(my_ds_10_columns <- parse_gctx(ds_path, cid=1:10))
 ```
 As expected, we see that we've now got a 10-column dataset.
 
-More commonly, we'll want to identify a subset of the data that is of particular interest and read only those rows and/or columns. In either case, we'll use the `rid` and/or `cid` arguments to `parse.gctx` to extract only the data we want. In this example, we'll use the GCTX file's embedded column annotations to identify the columns corresponding to the compound *vemurafenib* and then read only those columns. We can extract these annotations using the `read.gctx.meta` function.
+More commonly, we'll want to identify a subset of the data that is of particular interest and read only those rows and/or columns. In either case, we'll use the `rid` and/or `cid` arguments to `parse_gctx` to extract only the data we want. In this example, we'll use the GCTX file's embedded column annotations to identify the columns corresponding to the compound *vemurafenib* and then read only those columns. We can extract these annotations using the `read_gctx_meta` function.
 ```{r}
 # read the column metadata
-col_meta <- read.gctx.meta(ds_path, dim="col")
+col_meta <- read_gctx_meta(ds_path, dim="col")
 
 # figure out which signatures correspond to vorinostat by searching the 'pert_iname' column
 idx <- which(col_meta$pert_iname=="vemurafenib")
 
 # read only those columns from the GCTX file by using the 'cid' parameter
-vemurafenib_ds <- parse.gctx(ds_path, cid=idx)
+vemurafenib_ds <- parse_gctx(ds_path, cid=idx)
 ```
 
 In the example above we used numeric column indices, but the `rid` and `cid` arguments also accept character vectors of ids. The following is equally valid.
 ```{r}
 # get a vector of character ids, using the id column in col_meta
 col_ids <- col_meta$id[idx]
-vemurafenib_ds2 <- parse.gctx(ds_path, cid=col_ids)
+vemurafenib_ds2 <- parse_gctx(ds_path, cid=col_ids)
 identical(vemurafenib_ds, vemurafenib_ds2)
 ```
 
@@ -130,7 +130,7 @@ cdesc <- data.frame(id=LETTERS[1:10], type=rep(c(3, 4), each=5))
 When working with `GCT` objects, it's often convenient to have the row and column annotations embedded as the `rdesc` and `cdesc` slots, respectively. If these metadata are stored separatly from the GCTX file itself, you can read them in separately and then apply them to the `GCT` object using the `annotate.gct` function. Let's parse the dataset again, only this time reading only the matrix. We'll then apply the column annotations we read in previously.
 ```{r}
 # we'll use the matrix_only argument to extract just the matrix
-(my_ds_no_meta <- parse.gctx(ds_path, matrix_only = TRUE))
+(my_ds_no_meta <- parse_gctx(ds_path, matrix_only = TRUE))
 ```
 Note in this case that cmapR still populates 1-column `data.frames` containing the row and column ids, but the rest of the annotations have been omitted.
 
@@ -139,7 +139,7 @@ Now we'll apply the column annotations using `annotate.gct`.
 # note we need to specifiy which dimension to annotate (dim)
 # and which column in the annotations corresponds to the column
 # ids in the matrix (keyfield)
-(my_ds_no_meta <- annotate.gct(my_ds_no_meta, col_meta, dim="col",
+(my_ds_no_meta <- annotate_gct(my_ds_no_meta, col_meta, dim="col",
                                keyfield="id"))
 ```
 Note how now the `cdesc` slot is populated after annotating.
@@ -147,7 +147,7 @@ Note how now the `cdesc` slot is populated after annotating.
 
 ## Slicing a GCT object
 
-Just as it's possible to read a subset of rows or columns from a GCTX file, it is also possible to extract a subset of rows or columns from a `GCT` object in memory. This is done with the `subset_gct` function. Just like `parse.gctx`, this function uses `rid` and `cid` parameters to determine which rows and columns to extract. Let's extract the *vemurafenib* columns from the `my_ds` object in memory.
+Just as it's possible to read a subset of rows or columns from a GCTX file, it is also possible to extract a subset of rows or columns from a `GCT` object in memory. This is done with the `subset_gct` function. Just like `parse_gctx`, this function uses `rid` and `cid` parameters to determine which rows and columns to extract. Let's extract the *vemurafenib* columns from the `my_ds` object in memory.
 ```{r}
 # in memory slice using the cid parameter
 vemurafenib_ds3 <- subset_gct(my_ds,
@@ -158,10 +158,10 @@ identical(vemurafenib_ds, vemurafenib_ds3)
 
 ## Melting GCT objects
 
-It's often useful to have data stored in long form `data.frame` objects, especially for compatibility with plotting libraries like [`ggplot2`](http://docs.ggplot2.org/current/). It's possible to convert a `GCT` object into this long form by using the `melt.gct` function, which relies on the `melt` function in the [`data.table`](https://cran.r-project.org/web/packages/data.table/) package.
+It's often useful to have data stored in long form `data.frame` objects, especially for compatibility with plotting libraries like [`ggplot2`](http://docs.ggplot2.org/current/). It's possible to convert a `GCT` object into this long form by using the `melt_gct` function, which relies on the `melt` function in the [`data.table`](https://cran.r-project.org/web/packages/data.table/) package.
 ```{r}
 # melt to long form
-vemurafenib_ds3_melted <- melt.gct(vemurafenib_ds3)
+vemurafenib_ds3_melted <- melt_gct(vemurafenib_ds3)
 ```
 
 ```{r}
@@ -175,7 +175,7 @@ ggplot(vemurafenib_ds3_melted, aes(x=pr_gene_symbol, y=value)) +
 
 ## Merging two GCT objects
 
-You can combine two independent `GCT` objects using the `merge.gct` function. Note that it is important to specify which dimension (row or column) you wish to merge on and that the two `GCT` objects in question share one common dimension.
+You can combine two independent `GCT` objects using the `merge_gct` function. Note that it is important to specify which dimension (row or column) you wish to merge on and that the two `GCT` objects in question share one common dimension.
 
 
 ## Math operations on GCT objects
@@ -209,11 +209,11 @@ head(col_max)
 `cmapR` also contains a handful of math functions designed specifically for operating on `GCT` objects.
 ```{r}
 # transposing a GCT object - also swaps row and column annotations
-(my_ds_transpose <- transpose.gct(my_ds))
+(my_ds_transpose <- transpose_gct(my_ds))
 
 # converting a GCT object's matrix to ranks
 # the 'dim' option controls the direction along which the ranks are calculated
-my_ds_rank_by_column <- rank.gct(my_ds, dim="col")
+my_ds_rank_by_column <- rank_gct(my_ds, dim="col")
 
 # plot z-score vs rank for the first 25 genes (rows)
 ranked_mat <- get_gct_matrix(my_ds_rank_by_column)
@@ -226,17 +226,17 @@ plot(ranked_mat[1:25, ],
 
 
 ## Writing GCT objects to disk
-`GCT` objects can be written to disk either in GCT or GCTX format using the `write.gct` and `write.gctx` functions, respectively.
+`GCT` objects can be written to disk either in GCT or GCTX format using the `write_gct` and `write_gctx` functions, respectively.
 ```{r}
 # write 'my_ds' in both GCT and GCTX format
-write.gct(my_ds, "my_ds")
-write.gctx(my_ds, "my_ds")
+write_gct(my_ds, "my_ds")
+write_gctx(my_ds, "my_ds")
 
 # write.gctx can also compress the dataset upon write,
 # which can be controlled using the 'compression_level' option.
 # the higher the value, the greater the compression, but the
 # longer the read/write time
-write.gctx(my_ds, "my_ds_compressed", compression_level = 9)
+write_gctx(my_ds, "my_ds_compressed", compression_level = 9)
 ```
 
 
