--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,3 @@
-Changes in version 0.99.0 (2020-01-03)
+Changes in version 0.99.0 (2020-01-13)
++ NOTE: updated function names replacing '.' with '_' (ex: 'parse_gctx')
 + Submitted to Bioconductor
