--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -240,6 +240,15 @@ write_gctx(my_ds, "my_ds_compressed", compression_level = 9)
 ```
 
 
+## Converting GCT objects to SummarizedExperiment objects
+
+The `GCT` class is quite similar in spirit to the `SummarizedExperiment` class from the `SummarizedExperiment` package (citation). Converting a `GCT` object to a `SummarizedExeriment` object is straightforward, as shown below.
+```{r}
+# ds is an object of class GCT
+(se <- as(ds, "SummarizedExperiment"))
+```
+
+
 # Session Info
 ```{r}
 sessionInfo()
